--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/ic_bg"
-    android:weightSum="10"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="20dp"
+    android:weightSum="10"
     tools:context=".ResultActivity">
 
     <TextView
@@ -32,16 +32,16 @@
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="240dp"
-        app:cardCornerRadius="5dp"
-        android:layout_weight="4">
+        android:layout_weight="4"
+        app:cardCornerRadius="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:padding="10dp"
-            android:background="#D0000000"
             android:layout_height="match_parent"
+            android:background="#D0000000"
             android:gravity="center_horizontal"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <TextView
                 android:id="@+id/tv_congratulations"
